Adapters Error Refactors and Documentation
